@@ -1,6 +1,7 @@
 Current Release
 - Fixed dnsrmhost's duplicate errors
 - Fixed dnsmkzone reverse zone reverse range assignment creation
+- Removed list functionality from dnsrmhost
 
 2010-01-27 release-0.11
 - Fixed dnsmkacl warning with no arguments
